=========================================================================
CHANGE LOG
=========================================================================

2009-03-21 Warren L. DeLano <warren@delsci.com>	

	* added simple fasta output
	
	* fixed major bug with 'domain' argument to select
		
	* greatly improved the performance of the peptide builder

	* fab command
	
2009-03-20 Warren L. DeLano <warren@delsci.com>	

	* very rough FASTA & ALN read support (full peptide builds)
	
2009-03-14 Warren L. DeLano <warren@delsci.com>	

	* updated the vmd molfile plugin code from current UIUC cvs

	* addressing various strict-aliasing issues for GCC
	
2009-03-13 Warren L. DeLano <warren@delsci.com>	

	* field_of_view now interpolated via get_view/set_view matrix
	  (appears to be backwards & forwards compatible)
	
2009-03-11 Warren L. DeLano <warren@delsci.com>	

	* front and back colors, label_color now defaults to front
	
	* fixed object duplication deadlock bug

	* show_frame_rate setting
	
	* valence_mode=1 setting for nicer valence display
	
2009-03-10 Warren L. DeLano <warren@delsci.com>	

	* dynamic_width settings and defaults
	
2009-03-06 Warren L. DeLano <warren@delsci.com>	

	* addressed problem reading mmod files
	
2009-02-08 Warren L. DeLano <warren@delsci.com>	

	* refactored multisave commmand

	* improved read-in performance for concatenated PDB files
	
2009-02-08 Warren L. DeLano <warren@delsci.com>	

	* fixed stupid load-from-URL bug...
	
	* GZ compression support for common input formats
	
	* confirmed DLP Stereo 3D support

	* fixed ray-tracing for checkboard, byrow, & bycolumn stereo 3D
	
2009-02-06 Warren L. DeLano <warren@delsci.com>	

	* saving .dat and .out now also default to mmod format
	
	* extensive reworking of stereo 3D code to enable new encodings
	
2009-01-14 Warren L. DeLano <warren@delsci.com>

	* found & fixed longstanding issue with psize.py in APBS plugin
	
	* eliminated alternative conformation identifiers from PQR files
	